@@ -36,6 +36,9 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2008-02-24 DP  1.8.3  FOSDEM fix: Include overriding columns in reverse
+                      engineered SQL for child tables, rather than commenting
+                      them out and marking as inherited.
 2008-02-20 DP  1.8.3  Avoid quoting 'text' when used as a type name per Erwin.
 2008-02-18 DP  1.8.3  Correctly generate table DDL when inherited columns
                       follow the last 'real' column, per Peter Gagarinov.
